# src/main/kotlin/br/com/fiap/apifindbar/dto/ListaBarDTO.kt
@@ -1,0 +1,9 @@
+package br.com.fiap.apifindbar.dto
+
+data class ListaBarDTO(
+
+    val estilosMusicais: List<String>?,
+    val musicaAoVivo: Boolean?,
+    val avaliacao: Int?,
+
+)
